--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
   "bugs": {
     "url": "https://github.com/fabecm/mqtt-stats/issues"
   },
-  "homepage": "https://github.com/fabecm/mqtt-stats#readme"
+  "homepage": "https://github.com/fabecm/mqtt-stats#readme",
+  "tonicExampleFilename": "example/tonic-dev.js"
 }
